Working PUT Result
